# OnvifAnalyzer

./: .gitignore  README.md  main.py  pyproject.toml  services.py
analyzer/: constants.py  main.py  services.py  utils.py
analyzer/onvif_services/: device.py  imaging.py  ptz.py
